# fastapi-microblog

./: .dockerignore  .env-docker  .env-docker.example  .env-test  .env-test.example  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt  script.sh
certs/: jwt-private.pem  jwt-public.pem
src/: config.py  main.py
src/api/: categories.py  comments.py  dependencies.py  posts.py  routers.py  users.py
src/api/auth/: redis.py  router.py  schemas.py  token.py
src/db/: db.py
src/models/: __init__.py  categories.py  comments.py  posts.py  users.py  vars.py
src/repositories/: comments.py  posts.py  users.py
src/schemas/: comments.py  posts.py  users.py
src/services/: comments.py  posts.py  users.py
src/utils/: password.py  repository.py  unitofwork.py
tests/: conftest.py  test_comments.py  test_posts.py  test_users.py
