[tool.poetry]
name = "fastapi-microblog"
version = "0.1.0"
description = ""
authors = ["darialissi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
